added babel and postcss autoprefixer

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <main>
       <h1>Welcome to the boiler!</h1>
       <p>This is a webpack boilerplate configuration, use it to develop sites with cool technologies like Sass and Babel, and deliver minified assets without effort.</p>
+      <p class="test">Test me pls!</p>
     </main>
   </body>
 </html>
