updated to include webpack v5

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Webpack boilerplate</title>
+    <meta name="viewport" content="width=device-width, inital-scale=1.0">
+    <title>Webpack v5 Boilerplate</title>
   </head>
   <body>
-    <main>
-      <h1>Welcome to the boiler!</h1>
-      <p>This is a webpack boilerplate configuration, use it to develop sites with cool technologies like Sass and Babel, and deliver minified assets without effort.</p>
-      <p class="test">Test me pls!</p>
-    </main>
+    <main id="root"></main>
   </body>
 </html>
